# VIPCALs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
GUI/: mock_pipeline.py  run_GUI.py  run_GUI_docker.py
GUI/py_files/: ui_VIPCALs.py  ui_help_window.py  ui_json_window.py  ui_main_window.py  ui_manual_window.py  ui_run_window.py
GUI/ui_files/: help_window.ui  json_window.ui  main_window.ui  manual_window.ui  run_window.ui
dockerfiles/: 31DEC24  Dockerfile  Singularity.def
dockerfiles/vipcals/: LICENSE  MANIFEST.in  README.md  pyproject.toml  vipcalsenv.yml
dockerfiles/vipcals/GUI/: ascii_logo_string.txt  run_GUI.py  run_GUI_docker.py
dockerfiles/vipcals/GUI/py_files/: ui_VIPCALs.py  ui_json_window.py  ui_main_window.py  ui_manual_window.py  ui_plots_window.py  ui_run_window.py
dockerfiles/vipcals/GUI/ui_files/: TEST.ui  VIPCALs.ui  main_window.ui  plots_window.ui
dockerfiles/vipcals/vipcals/: __main__.py  __main__alfrd.py  __main__docker.py  pipeline.py
dockerfiles/vipcals/vipcals/scripts/: bandpass.py  calib_choose.py  display.py  eop_corr.py  fringe_fit.py  helper.py  instr_calib.py  optimize_solint.py  pang_corr.py  refant_choose.py  ty_smooth.py
docs/: .readthedocs.yaml  mylexer.py
docs/api/: vipcals.rst  vipcals.scripts.Proxy.rst  vipcals.scripts.Wizardry.rst  vipcals.scripts.rst
docs/source/: conf.py  index.rst  installation.rst  overview.rst  usage.rst  vipcals.rst
docs/source/_static/: custom.css
src/vipcals/: __main__.py
src/vipcals/scripts/: amp_cal.py  fringe_fit.py  ionos_corr.py  load_data.py  load_tables.py  optimize_solint.py  refant_choose.py  ty_smooth.py
vipcals/: __main__.py  __main__alfrd.py  __main__docker.py  amp_cal_script.py  example_input.json  pipeline.py  pipeline_alfrd.py
vipcals/catalogues/: vlbaCalib_allfreq_full.txt  vlba_gains.key
vipcals/scripts/: accor.py  amp_cal.py  bandpass.py  calib_choose.py  display.py  eop_corr.py  export_data.py  fringe_fit.py  helper.py  instr_calib.py  ionos_corr.py  load_data.py  load_tables.py  optimize_solint.py  pang_corr.py  phase_shift.py  plotter.py  refant_choose.py  ty_smooth.py
