[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VIPCALs"
version = "0.1"
authors = [
    {name = "Diego Álvarez-Ortega", email = "dalvarez@physics.uoc.gr"}
]
description = "Automated VLBI data calibration pipeline using AIPS"
readme = "README.md"
requires-python = "= 3.8.20"
license = {file = "LICENSE"}
keywords = ["VLBI", "AIPS", "ParselTongue", "Very Long Baseline Interferometry", "VLBA"]
dependencies = []

[project.scripts]
vipcals = "vipcals.GUI.run_GUI:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
repository = "https://gitlab.ia.forth.gr/smile/vipcals"
