[metadata]
name = VIPCALs
version = 0.1
author = Diego Álvarez-Ortega
author_email = dalvarez@physics.uoc.gr
description = 
repository = url = https://gitlab.ia.forth.gr/smile/vipcals/
readme = README.md
keywords = AIPS, ParselTongue, VLBI


[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src